# taipo

./: README.md  main.py  pyproject.toml
Taipo Chat.glyphsPlugin/Contents/: Info.plist
Taipo Chat.glyphsPlugin/Contents/Resources/: _version.py  plugin.py  test.py  tools.py
TaipoChat.glyphsPlugin/Contents/: Info.plist
TaipoChat.glyphsPlugin/Contents/Resources/: _version.py  http_client.py  plugin.py  provider.py  state.py  test.py  tools.py  utils.py
TaipoChat.glyphsPlugin/Contents/Resources/assets/: system_prompt.md
TaipoChat.glyphsPlugin/Contents/Resources/tests/: __init__.py  _bootstrap.py  _glyphs_sdk.py  _render_stubs.py  execute_tool.py  glyphs.py  mock.py  smoke.py  smoke_model_toolset.py  test_model_toolset.py
TaipoChat.glyphsPlugin/Contents/Resources/tests/fixtures/: legacy_tool_schemas.py
TaipoChat.glyphsPlugin/Contents/Resources/tools/: __init__.py  anchors.py  context.py  edit.py  font_access.py  formatting.py  geometry.py  judge.py  model_toolset.py  read.py  render.py  snapshot.py
