[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "taipo-chat"
dynamic = ["version"]
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[tool.hatch.version]
path = "TaipoChat.glyphsPlugin/Contents/Resources/_version.py"

[tool.hatch.build.targets.wheel]
bypass-selection = true
